# ec2-instance

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ClusterRoleBinding.yaml  Dockerfile  Dockerfile.keycloak  LICENSE  README.md  clusterrole.yaml  compose.yaml  deploy-api.yaml  deployment.yaml  general_info  messages_log  package_info  pyproject.toml  s1_report_ctl.txt
.github/workflows/: api.yaml  check.yaml  deploy.yaml  eval.yaml  release-please.yaml
boot/: config-5.14.0-503.21.1.el9_5.x86_64  config-5.14.0-503.22.1.el9_5.x86_64  config-5.14.0-503.26.1.el9_5.x86_64
docker/keycloak/import/: realm-localhost.json
kernel_debug_tracing/: available_filter_functions
kernel_debug_tracing_events_sched_sched_process_exec/: format
kernel_debug_tracing_events_sched_sched_process_exit/: format
kernel_debug_tracing_events_sched_sched_process_fork/: format
kernel_debug_tracing_events_syscalls_sys_enter_exit/: format
kernel_debug_tracing_events_syscalls_sys_enter_kill/: format
proc/: cpuinfo
s1_assets/: dv_exclusions_default.json  global_detectors.pkg
s1_configuration/: basic.conf  communication_info  defaults.conf  installation_params.json  local.conf  memory_limiter.json  sentineld  sentinelone.service
scripts/: release.sh
selinux/: config
selinux/targeted/: .policy.sha512
selinux/targeted/contexts/files/: file_contexts  file_contexts.homedirs  file_contexts.pre  file_contexts.subs_dist
selinux/targeted/policy/: policy.33
src/connectai/: __main__.py  settings.py
src/connectai/cli/: commands.py
src/connectai/evaluation/: __init__.py
src/connectai/evaluation/conversation_output_agent/: evaluator.py  test_cases.json
src/connectai/evaluation/data/: export.py
src/connectai/evaluation/evaluator/: __init__.py  base_evaluator.py  llama_guard.py  metrics.py
src/connectai/evaluation/factory/: __init__.py  test_factory.py
src/connectai/evaluation/state_classification/: evaluator.py  test_cases.json
src/connectai/evaluation/visualization/: app.py
src/connectai/handlers/: README.md  __init__.py
src/connectai/handlers/api/: app.py  archive_manager.py  conversation_flow.py  errors.py  main.py  models.py
src/connectai/handlers/callsight/: execute.py  types.py
src/connectai/handlers/exception/: __init__.py  auth.py  validation.py
src/connectai/handlers/internal_bus/: session_bus.py  shared_pubsub.py
src/connectai/handlers/llm/: __init__.py  error_strategy.py  llm_handler.py  platform_selector.py
src/connectai/handlers/metrics/: prometheus.py
src/connectai/handlers/queue/: sqs.py  worker.py
src/connectai/handlers/utils/: api_idp.py  calculator_utils.py  context_graph.py  graph.py  paths.py  string_matcher.py
src/connectai/handlers/whatsapp/: send.py
src/connectai/modules/: README.md
src/connectai/modules/datamodel/: __init__.py  _api.py  _campaigns.py  _chat_view.py  _conversations.py  _features.py  _flow_action.py  _flow_callsight.py  _flow_supervisor.py  _languages.py  _messaging.py  _plans.py  _response.py  _runtime.py  _verbosity.py  (+1 more)
src/genie_core/: pyproject.toml
src/genie_dao/: pyproject.toml
sys_devices_virtual_dmi_id/: product_name
tests/: conftest.py  test_main.py
tests/cli/: test_cli.py
tests/evaluation/: test_conversation_output_evaluator.py  test_state_classification_evaluator.py  test_visualization_conversation_output.py  test_visualization_state_classification.py
tests/handlers/api/: test_main.py
tests/handlers/llm/: test_llm_handler.py
tests/handlers/queue/: test_sqs.py  test_worker.py
tests/handlers/utils/: test_calculator_NBO.py  test_string_matcher.py
tests/modules/state_machine/: conftest.py  test_flow.py  test_flow_supervisor.py  test_prompt.py  test_state.py  test_state_loader.py  test_state_machine_loader.py
tests/utils/: conftest.py
(+185 files in other folders)
